--- a/aboutzhs.html
+++ b/aboutzhs.html
@@ -356,7 +356,7 @@
         </div>
         <div class="theme-overlay opacity-90"></div>
     </footer>
-    <div class="footer-copyright bg-theme1">
+    <div class="footer-copyright bg-title">
         <div class="container">
             <p class="m-0 white text-center py-3">This site is maintained and developed by JECRC Technical Team</p>
             <p><h6><a href="#"></a></h6></p>
