--- a/index.html
+++ b/index.html
@@ -1039,6 +1039,21 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-sm-4 item">
+                            <div class="testimonial-item bg-white p-5">
+                                <div class="testi-details mb-4">
+                                    <i class="fa fa-quote-left me-2 fs-1"></i>
+                                    <p class="m-0">
+                                        Attending JECRC Model United Nations for the past two years has been an enriching and transformative experience.JECRC MUN has consistently provided a platform for intellectual growth and awareness. I wholeheartedly recommend JECRC MUN to any aspiring diplomat or changemaker seeking to broaden their horizons and make a difference in the world.</p>
+                                </div>
+                                <div class="author-info d-flex align-items-center">
+                                    <img src="images/reviewer/5.jpg" alt="">
+                                    <div class="author-title ms-3">
+                                        <h5 class="m-0 theme">Sarthak Jain</h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-5 ps-lg-5">
@@ -1252,7 +1267,7 @@
         </div>
         <div class="theme-overlay opacity-90"></div>
     </footer>
-    <div class="footer-copyright bg-theme1">
+    <div class="footer-copyright bg-title">
         <div class="container">
             <p class="m-0 white text-center py-3">This site is maintained and developed by JECRC Technical Team</p>
             <p><h6><a href="#"></a></h6></p>
