--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
     <!-- header ends -->
 
     <!-- BreadCrumb Starts -->  
-    <section class="breadcrumb-main" style="background-image:url(images/pexels-wendy-wei-1190297.jpg);">
+    <section class="breadcrumb-main" style="background-image:url(images/hero-bg.webp);">
         <div class="breadcrumb-outer">
             <div class="container">
                 <div class="breadcrumb-content text-center pt-14 pb-2">
