--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </div>
                     <div class="col-lg-5 ps-lg-4">
                         <div class="about-content text-center text-lg-start mb-4">
-                            <h4 class="h-title">Events</h4>
+                            <h4 class="h-title">JECRC MUN?</h4>
                             <div class="selector4" style="display: flex; justify-content: center;">
                                 <h2 class="ah-headline">
                                   <span>Why Should You Join The</span>
@@ -847,7 +847,7 @@
                 </div>
             </div> -->
             <div class="video-expo w-75 mx-auto position-relative mb-minus">
-                <video src="images/after.mp4" alt="" class="p-2 bg-white" autoplay muted loop>
+                <video src="images/after.mp4" alt="" class="p-2 bg-white aftermovie-video" autoplay muted loop width="100%" >
                 <div class="video-button text-center position-absolute top-50 start-50 z-index2 translate-50">
                     <div class="call-button text-center">
                     </div>
