--- a/team.html
+++ b/team.html
@@ -59,7 +59,7 @@
                                     </ul> 
                                 </li>
                                 <li><a href="team.html" class="">Team</a></li>
-                                <li><a href="#registration" class="">Registration</a></li>
+                                <li><a href="pricing.html" class="">Registration</a></li>
 
                                 <li><a href="contact.html" class="">Contact Us</a></li>
                                 
@@ -315,7 +315,7 @@
         </div>
         <div class="theme-overlay opacity-90"></div>
     </footer>
-    <div class="footer-copyright bg-theme1">
+    <div class="footer-copyright bg-title">
         <div class="container">
             <p class="m-0 white text-center py-3">This site is maintained and developed by JECRC Technical Team</p>
             <p><h6><a href="#"></a></h6></p>
