--- a/aboutzhs.html
+++ b/aboutzhs.html
@@ -57,8 +57,8 @@
                                         <li><a href="aboutzhs.html">Zero Hour Summit</a></li>
                                     </ul> 
                                 </li>
-                                <li><a href="#" class="">Team</a></li>
-                                <li><a href="#registration" class="">Registration</a></li>
+                                <li><a href="team.html" class="">Team</a></li>
+                                <li><a href="pricing.html" class="">Registration</a></li>
 
                                 <li><a href="contact.html" class="">Contact Us</a></li>
                                 
@@ -318,12 +318,10 @@
                     <div class="footer-links">
                         <h4 class="white mb-4">Quick link</h4>
                         <ul class="list">
-                            <li class="pb-2"><a href="about-us.html">About Us</a></li>
-                            <li class="pb-2"><a href="about-us.html">Gallery</a></li>
-                            <li class="pb-2"><a href="about-us.html">Sponsors</a></li>
-                            <li class="pb-2"><a href="about-us.html">Speakers</a></li>
-                            <li class="pb-2"><a href="#about-us.html">Contact Us</a></li>
-                            <li class="pb-2"><a href="about-us.html">Team</a></li>
+                            <li class="pb-2"><a href="aboutmun.html">MUN Conference</a></li>
+                            <li class="pb-2"><a href="aboutzhs.html">ZHS</a></li>
+                            <li class="pb-2"><a href="team.html">Team</a></li>
+                            <li class="pb-2"><a href="contact.html">Contact Us</a></li>
 
                         </ul>
                     </div>
