--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                 </h2>
                             </div>
                             <p class="mb-4">JECRC MUN is a community established with the aim of creating a society for youth to discuss, debate and deliberate present-day crises contributing towards solutions for global imbalance. Focusing on the need to value ideas and approach toward solutions for the atrocities around the globe, some like-minded individuals figured a need for such a platform for people to discuss and deliberate With the laying of the foundation by Shri Kulbhushan Kothari, our journey began in 2012, with us being the first institution in Jaipur and second in Rajasthan to introduce Model UN to the crowd.</p>
-                            <a href="about.html" class="nir-btn">Read More <i class="fa fa-angle-right "></i></a>
+                            
                         </div>
                     </div>
                     <div class="col-lg-7 ps-4">
@@ -1221,12 +1221,10 @@
                     <div class="footer-links">
                         <h4 class="white mb-4">Quick link</h4>
                         <ul class="list">
-                            <li class="pb-2"><a href="about-us.html">About Us</a></li>
-                            <li class="pb-2"><a href="about-us.html">Gallery</a></li>
-                            <li class="pb-2"><a href="about-us.html">Sponsors</a></li>
-                            <li class="pb-2"><a href="about-us.html">Speakers</a></li>
-                            <li class="pb-2"><a href="#about-us.html">Contact Us</a></li>
-                            <li class="pb-2"><a href="about-us.html">Team</a></li>
+                            <li class="pb-2"><a href="aboutmun.html">MUN Conference</a></li>
+                            <li class="pb-2"><a href="aboutzhs.html">ZHS</a></li>
+                            <li class="pb-2"><a href="team.html">Team</a></li>
+                            <li class="pb-2"><a href="contact.html">Contact Us</a></li>
 
                         </ul>
                     </div>
