--- a/pricing.html
+++ b/pricing.html
@@ -224,12 +224,10 @@
                     <div class="footer-links">
                         <h4 class="white mb-4">Quick link</h4>
                         <ul class="list">
-                            <li class="pb-2"><a href="about-us.html">About Us</a></li>
-                            <li class="pb-2"><a href="about-us.html">Gallery</a></li>
-                            <li class="pb-2"><a href="about-us.html">Sponsors</a></li>
-                            <li class="pb-2"><a href="about-us.html">Speakers</a></li>
-                            <li class="pb-2"><a href="#about-us.html">Contact Us</a></li>
-                            <li class="pb-2"><a href="about-us.html">Team</a></li>
+                            <li class="pb-2"><a href="aboutmun.html">MUN Conference</a></li>
+                            <li class="pb-2"><a href="aboutzhs.html">ZHS</a></li>
+                            <li class="pb-2"><a href="team.html">Team</a></li>
+                            <li class="pb-2"><a href="contact.html">Contact Us</a></li>
 
                         </ul>
                     </div>
@@ -262,7 +260,7 @@
         </div>
         <div class="theme-overlay opacity-90"></div>
     </footer>
-    <div class="footer-copyright bg-theme1">
+    <div class="footer-copyright bg-title">
         <div class="container">
             <p class="m-0 white text-center py-3">This site is maintained and developed by JECRC Technical Team</p>
             <p><h6><a href="#"></a></h6></p>
