--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,7 @@
     <!-- testimonial ends -->
 
     <!-- partner starts -->
-    <section class="event-partners pb-8" style="background-image: url(images/contentbg.png);">
+    <!-- <section class="event-partners pb-8" style="background-image: url(images/contentbg.png);">
         <div class="container">
             <div class="section-title mb-5 w-75 mx-auto text-center">
                 <h3 class="h-title">Partners</h3>
@@ -1113,7 +1113,7 @@
             </div>
         </div>
         <div class="white-overlay opacity-75"></div>
-    </section>
+    </section> -->
     <!-- partner ends -->
 
     <div class="event-seperator">
