--- a/team.html
+++ b/team.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Eventiz - Event Conference HTML Templates</title>
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
+    <title>JECRC MUN</title>
+    <!-- Logo -->
+    <link rel="shortcut icon" type="image/x-icon" href="images/mun-orange.png">
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!--Custom CSS-->
