--- a/team.html
+++ b/team.html
@@ -444,7 +444,7 @@
                                 <div class="team-image bg-white" style="width: 250px; height: 250px; border-radius: 50%; overflow: hidden; margin: 0 auto;">
                                     <img src="images/TeamImages/Sanchali Khandelwal_Outreach.jpg" alt="team">
                                 </div>
-                                <div class="team-content text-center p-4" style="width: 250px; height: 250px; border-radius: 50%; overflow: hidden; margin: 0 auto;">
+                                <div class="team-content text-center p-4" >
                                     <h4 class="mb-0 theme">Sanchali Khandelwal</h4>
                                     <p class="mb-3 black">Outreach Head</p>
                                     <div class="social-links">
@@ -501,7 +501,7 @@
                                         <ul>
                                             <li><a href="https://www.linkedin.com/in/yash-kumar-vaishnav-48b062220/?trk=public_profile_browsemap&originalSubdomain=in"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
                                         </ul>
-                                    </div>
+                                  </div>
                                 </div>
                             </div>
                         </div>
@@ -771,7 +771,7 @@
                                     </div>
                                     <div class="team-content text-center p-4">
                                         <h4 class="mb-0 theme">Radhika Rajawat</h4>
-                                        <p class="mb-3 black">Guest and Collaboration <Head></Head></p>
+                                        <p class="mb-3 black">Guest and Collaboration Head</p>
                                         <div class="social-links">
                                             <ul>
                                               <li><a href="https://www.linkedin.com/in/radhika-rajawat-b05615241/"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
