--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="col-lg-7">
                         <div class="banner-content text-lg-start text-center">
                             <div class="selector4" style="display: flex; justify-content: center;">
-                                <h1 class="ah-headline white">
+                                <h1 class="ah-headline white jecrc-hero" >
                                   <span>13th edition of</span>
                                   <span class="ah-words-wrapper white">
                                     <b class="is-visible textcap">JECRC MUN</b>
