--- a/team.html
+++ b/team.html
@@ -440,22 +440,6 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-4 mb-3" style="text-align: center;">
-                            <div class="team-list position-relative" >
-                                <div class="team-image bg-white" style="width: 250px; height: 250px; border-radius: 50%; overflow: hidden; margin: 0 auto;">
-                                    <img src="images/TeamImages/Sanchali Khandelwal_Outreach.jpg" alt="team">
-                                </div>
-                                <div class="team-content text-center p-4" style="width: 250px; height: 250px; border-radius: 50%; overflow: hidden; margin: 0 auto;">
-                                    <h4 class="mb-0 theme">Sanchali Khandelwal</h4>
-                                    <p class="mb-3 black">Outreach Head</p>
-                                    <div class="social-links">
-                                        <ul>
-                                           <li><a href="https://www.linkedin.com/in/sanchali-khandelwal-a7736924a"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 mb-3" style="text-align: center;">
                             <div class="team-list position-relative">
                                 <div class="team-image bg-white" style="width: 250px; height: 250px; border-radius: 50%; overflow: hidden; margin: 0 auto;">
                                     <img src="images/TeamImages/Aditya Sharma_outreach.jpg" alt="team">
@@ -771,7 +755,7 @@
                                     </div>
                                     <div class="team-content text-center p-4">
                                         <h4 class="mb-0 theme">Radhika Rajawat</h4>
-                                        <p class="mb-3 black">Guest and Collaboration <Head></Head></p>
+                                        <p class="mb-3 black">Guest and Collaboration Head<Head></Head></p>
                                         <div class="social-links">
                                             <ul>
                                               <li><a href="https://www.linkedin.com/in/radhika-rajawat-b05615241/"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
