--- a/aboutmun.html
+++ b/aboutmun.html
@@ -162,7 +162,7 @@
                 <h3 class="h-title" style="color:rgba(255, 255, 255, 0.179);">Gallery</h3>
                 <div class="selector4" style="display: flex; justify-content: center;">
                     <h2 class="ah-headline mb-0">
-                        <span style="color: white;">Beautiful Snapshot Of Our Last </span>
+                        <span style="color: white;">Beautiful Snapshots Of Our Last </span>
                         <span class="ah-words-wrapper white theme">
                         <b class="is-visible textcap">jecrcmun</b>
                         <b>jecrcmun</b>
@@ -275,14 +275,14 @@
                 <h4 class="theme">Join Jecrc MUN 2024</h4>
                 <div class="selector4" style="display: flex; justify-content: center;">
                     <h2 class="ah-headline mb-0">
-                        <span>Join Us At 13th JECRC MUN </span>
+                        <span>Join Us At The 13th Edition of  </span>
                         <span class="ah-words-wrapper white theme">
-                        <b class="is-visible textcap">2024</b>
-                        <b>2024</b>
+                        <b class="is-visible textcap"></b>
+                        <b>JECRC MUN</b>
                         </span>
                     </h2>
                 </div>
-                <p class="my-3">Join a global community, uniting over 100 international delegates, driven by a shared vision of progress and change. </p>
+                <p class="my-3">Join a global community, uniting over 3000 delegates till date, driven by a shared vision of progress and change. </p>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLScad81MpbvE4iGFBpSP_tD_JxcGsQooLwN3Fm7MG05JKV9KBw/viewform" class="nir-btn">Register Now <i class="fa fa-angle-right "></i></a>
             </div>
         </div>
