--- a/aboutzhs.html
+++ b/aboutzhs.html
@@ -107,7 +107,7 @@
                                 </div>
                                 <div class="box-body">
                                     <h4 class="infobox-title mb-1">Our Vision </h4>
-                                    <p class="mb-0">To empower youth through inclusive dialogue for impactful change.</p>
+                                    <p class="mb-0">To inspire students at JECRC Foundation to engage in public speaking and cultivate diplomatic skills.</p>
                                 </div>
                             </div>
 
@@ -116,8 +116,9 @@
                                     <i class="fas fa-users fs-1 theme"></i>
                                 </div>
                                 <div class="box-body">
-                                    <h4 class="infobox-title mb-1">A mesmerizing experience </h4>
-                                    <p class="mb-0">JECRC MUN takes you out from the world of textbooks and lectures and encourages learning through hands- on experience.</p>
+                                    <h4 class="infobox-title mb-1">A launching pad </h4>
+                                    <p class="mb-0"> ZHS introduces young students on our campus to debates and diplomacy, fostering hands-on learning experiences.
+                                    </p>
                                 </div>
                             </div>
 
@@ -126,8 +127,8 @@
                                     <i class="fas fa-gear fs-1 theme"></i>
                                 </div>
                                 <div class="box-body">
-                                    <h4 class="infobox-title mb-1">Exchange the Idea </h4>
-                                    <p class="mb-0">Where minds meet, ideas collide, and diplomacy ignites at the heart of every MUN event </p>
+                                    <h4 class="infobox-title mb-1">A precursor to the flagship JECRC MUN </h4>
+                                    <p class="mb-0"> ZHS eases the jitters of direct participation in a national MUN, acting as a comforting buffer.</p>
                                 </div>
                             </div>
                         </div>
@@ -144,7 +145,8 @@
                                   </span>
                                 </h2>
                             </div>
-                            <p class="mb-0">Zero Hour Summit (ZHS) is a bespoke debating competition exclusive to JECRC Foundation students, orchestrated by the esteemed JECRC Model United Nations (MUN) Society. It fosters a passion for global affairs and intellectual discourse through four dynamic committees tackling diverse agendas. ZHS acts as a stepping stone to the grand JECRC MUN conference, offering participants a glimpse into diplomacy and holistic development. Edmund Burke's words, "All that is necessary for the triumph of evil is for good men to do nothing," encapsulate ZHS's ethos: fostering progress through respectful debate and diverse perspectives. It cultivates oratory, critical thinking, and empathy among students, creating a positive learning environment on campus. Through ZHS, participants engage in constructive dialogue, challenging their beliefs and evolving into better communicators and thinkers.</p>
+                            <p class="mb-0">Zero Hour Summit (ZHS) is a debating competition exclusively tailored for JECRC Foundation students and organized by the esteemed JECRC Model United Nations (MUN) Society. It is a platform meticulously crafted to kindle an interest in debating and cultivate an understanding of contemporary issues vital for navigating today's complex world.
+                                The event unfolds with four distinct committees deliberating on equally diverse agendas, each designed to stimulate intellectual discourse and ignite a passion for global affairs among participants. Moreover, ZHS serves as a precursor to the grand JECRC MUN conference held in the subsequent semesters, offering participants a glimpse into the world of diplomacy and fostering holistic personality development. As renowned philosopher and statesman Edmund Burke once said, "All that is necessary for the triumph of evil is for good men to do nothing." At ZHS, we believe in the power of healthy debate as a cornerstone of progress and enlightenment. Through respectful discourse and the exchange of diverse perspectives, we not only challenge our own beliefs but also foster understanding and empathy.</p>
                             
                         </div>
                     </div>
@@ -162,7 +164,7 @@
                 <h3 class="h-title" style="color:rgba(255, 255, 255, 0.179);">Gallery</h3>
                 <div class="selector4" style="display: flex; justify-content: center;">
                     <h2 class="ah-headline mb-0">
-                        <span style="color: white;">Beautiful Snapshot Of Our Last </span>
+                        <span style="color: white;">Beautiful Snapshots Of Our Last </span>
                         <span class="ah-words-wrapper white theme">
                         <b class="is-visible textcap">Zero Hour Summit</b>
                         <b>Zero Hour Summit</b>
@@ -274,14 +276,14 @@
                 <h4 class="theme">Join Jecrc MUN 2024</h4>
                 <div class="selector4" style="display: flex; justify-content: center;">
                     <h2 class="ah-headline mb-0">
-                        <span>Join Us At 13th JECRC MUN </span>
+                        <span>Join Us At The 13th Edition of </span>
                         <span class="ah-words-wrapper white theme">
-                        <b class="is-visible textcap">2024</b>
-                        <b>2024</b>
+                        <b class="is-visible textcap"></b>
+                        <b>JECRC MUN</b>
                         </span>
                     </h2>
                 </div>
-                <p class="my-3">Join a global community, uniting over 100 international delegates, driven by a shared vision of progress and change. </p>
+                <p class="my-3">Join a global community, uniting over 3000 delegates till date, driven by a shared vision of progress and change. </p>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLScad81MpbvE4iGFBpSP_tD_JxcGsQooLwN3Fm7MG05JKV9KBw/viewform" class="nir-btn">Register Now <i class="fa fa-angle-right "></i></a>
             </div>
         </div>
