--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
             <div class="contact-info-main mt-0">
                 <div class="section-title mb-5 w-75 mx-auto text-center">
                     <h3 class="h-title">Contact</h3>
-                    <h4 class="theme">Touch With Us</h4>
+                    <h4 class="theme"> Get in Touch With Us</h4>
                     <div class="selector4" style="display: flex; justify-content: center;">
                         <h2 class="ah-headline mb-0">
                             <span>How Can We </span>
