--- a/team.html
+++ b/team.html
@@ -163,7 +163,7 @@
              
                     <div class="text-center">
                         <h3 class="ah-headline pb-2">
-                            <span>Secretary General</span>
+                            <span>Secretariat </span>
                         </h3>
                     </div></div> <br/>
                     <div class="row justify-content-center">
@@ -439,22 +439,7 @@
                         </h3>
                     </div>
                     <div class="row">
-                        <div class="col-lg-4 mb-3" style="text-align: center;">
-                            <div class="team-list position-relative" >
-                                <div class="team-image bg-white" style="width: 250px; height: 250px; border-radius: 50%; overflow: hidden; margin: 0 auto;">
-                                    <img src="images/TeamImages/Sanchali Khandelwal_Outreach.jpg" alt="team">
-                                </div>
-                                <div class="team-content text-center p-4" >
-                                    <h4 class="mb-0 theme">Sanchali Khandelwal</h4>
-                                    <p class="mb-3 black">Outreach Head</p>
-                                    <div class="social-links">
-                                        <ul>
-                                           <li><a href="https://www.linkedin.com/in/sanchali-khandelwal-a7736924a"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                     
                         <div class="col-lg-4 mb-3" style="text-align: center;">
                             <div class="team-list position-relative">
                                 <div class="team-image bg-white" style="width: 250px; height: 250px; border-radius: 50%; overflow: hidden; margin: 0 auto;">
