--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,7 @@
     <!-- testimonial ends -->
 
     <!-- partner starts -->
-    <!-- <section class="event-partners pb-8" style="background-image: url(images/contentbg.png);">
+    <section class="event-partners pb-8" style="background-image: url(images/contentbg.png);">
         <div class="container">
             <div class="section-title mb-5 w-75 mx-auto text-center">
                 <h3 class="h-title">Partners</h3>
@@ -1075,37 +1075,15 @@
                 </div>
             </div>
             <div class="partners_inner">
-                <div class="row">
+                <div class="row justify-content-center">
                     <div class="col-lg-3 col-md-6 mb-4">
                         <div class="partner-list border-all mb-4">
                             <img src="images/cl-5.png" alt="">
-                        </div>
-                        <div class="partner-list border-all">
-                            <img src="images/cl-3.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 mb-4">
-                        <div class="partner-list border-all mb-4">
-                            <img src="images/cl-5.png" alt="">
-                        </div>
-                        <div class="partner-list border-all">
-                            <img src="images/cl-4.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 mb-4">
-                        <div class="partner-list border-all mb-4">
-                            <img src="images/cl-1.png" alt="">
-                        </div>
-                        <div class="partner-list border-all">
-                            <img src="images/cl-2.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-4">
                         <div class="partner-list border-all mb-4">
                             <img src="images/cl-2.png" alt="">
-                        </div>
-                        <div class="partner-list border-all">
-                            <img src="images/cl-1.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -1113,7 +1091,7 @@
             </div>
         </div>
         <div class="white-overlay opacity-75"></div>
-    </section> -->
+    </section>
     <!-- partner ends -->
 
     <div class="event-seperator">
