Team and content update

--- a/aboutmun.html
+++ b/aboutmun.html
@@ -126,7 +126,7 @@
                                     <i class="fas fa-gear fs-1 theme"></i>
                                 </div>
                                 <div class="box-body">
-                                    <h4 class="infobox-title mb-1">Exchange the Idea </h4>
+                                    <h4 class="infobox-title mb-1">Exchange of  ideas </h4>
                                     <p class="mb-0">Where minds meet, ideas collide, and diplomacy ignites at the heart of every MUN event </p>
                                 </div>
                             </div>
@@ -144,7 +144,7 @@
                                   </span>
                                 </h2>
                             </div>
-                            <p class="mb-0">JECRC Model United Nations (MUN) in Jaipur, Rajasthan, is a premier platform uniting intellect with diplomacy. Established in 2012, it's the region's largest MUN, fostering the leaders of tomorrow through open dialogue on complex global issues. JECRC MUN inspires, challenges, and equips youth for regional and national progress. It's more than just a conference; it's an enriching experience that shapes perspectives and enhances personal growth. Participants attest to its impact on their intellect and character. Beyond committee rooms, it's a celebration of ideas and collaboration. Join us in creating a space where students refine skills and contribute to a better, interconnected world.</p>
+                            <p class="mb-0">JECRC Model United Nations (MUN) in Jaipur stands as a dynamic platform merging intellect and diplomacy, nurturing tomorrow's leaders. Staying true to the UN's spirit, we facilitate constructive dialogue on diverse, complex issues, fostering responsibility among young adults. Located in Rajasthan's vibrant capital, we hold the distinction of being the largest MUN in the state, with a rich history dating back to its inception. Through our flagship JECRC MUN conference, strategic partnerships, and collaborative efforts, we inspire, challenge, and equip youth with a deeper global understanding. Since our establishment in 2012, we've embarked on a journey of growth, continually elevating our standards and impacting thousands annually. Attendees affirm our MUN's transformative impact, enhancing personal growth over two days of discussion. JECRC MUN is a celebration of ideas and a platform for personal and academic growth, where students refine skills to contribute to a better world. Join us in shaping tomorrow's leaders!</p>
                             
                         </div>
                     </div>
