--- a/contact.html
+++ b/contact.html
@@ -87,8 +87,8 @@
         <div class="breadcrumb-outer">
             <div class="container">
                 <div class="breadcrumb-content text-center pt-14 pb-2">
-                    
-                    <h1 class="mb-0 white">Contact us</h1>
+                    <h5 class="theme mb-0">JECRC MUN</h5>
+                    <h1 class="mb-0 white">CONTACT US</h1>
                 </div>
             </div>
         </div>
