--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
                             <div class="pricing-price py-4">
                                 
                                 <h3 class="mb-0 theme d-flex align-items-start justify-content-center lh-1">
-                                    <span class="pricing-currency theme">Rs.</span> 2200/-</h3>
+                                    <span class="pricing-currency theme">Rs.</span> 2199/-</h3>
                                 <p class="mb-0 black">Per Person</p>
                             </div>
                             <ul class="pricing-features-list mb-4">
@@ -772,7 +772,7 @@
                             <div class="pricing-price py-4">
                                 
                                 <h3 class="mb-0 theme d-flex align-items-start justify-content-center lh-1">
-                                    <span class="pricing-currency theme">Rs.</span> 2200/-</h3>
+                                    <span class="pricing-currency theme">Rs.</span> 2199/-</h3>
                                 <p class="mb-0">Per Person</p>
                             </div>
                             <ul class="pricing-features-list mb-4">
@@ -1139,7 +1139,7 @@
                             <h4 class="theme">Reach Us</h4>
                             <div class="selector4" style="display: flex; justify-content: center;">
                                 <h2 class="ah-headline mb-0">
-                                    <span>Get Direction To The Event </span>
+                                    <span>Get Directions To The Event </span>
                                     <span class="ah-words-wrapper white theme">
                                     <b class="is-visible textcap">Location</b>
                                     <b>Location</b>
