--- a/pricing.html
+++ b/pricing.html
@@ -86,8 +86,8 @@
         <div class="breadcrumb-outer">
             <div class="container">
                 <div class="breadcrumb-content text-center pt-14 pb-2">
-                    <h5 class="theme mb-0">Jecrc Mun</h5>
-                    <h1 class="mb-0 white">Registration</h1>
+                    <h5 class="theme mb-0">JECRC MUN</h5>
+                    <h1 class="mb-0 white">REGISTRATION</h1>
                 </div>
             </div>
         </div>
@@ -150,7 +150,7 @@
                             <div class="pricing-price py-4">
                                 
                                 <h3 class="mb-0 theme d-flex align-items-start justify-content-center lh-1">
-                                    <span class="pricing-currency theme">Rs.</span> 2200/-</h3>
+                                    <span class="pricing-currency theme">Rs.</span> 2199/-</h3>
                                 <p class="mb-0 black">Per Person</p>
                             </div>
                             <ul class="pricing-features-list mb-4">
@@ -174,7 +174,7 @@
                             <div class="pricing-price py-4">
                                 
                                 <h3 class="mb-0 theme d-flex align-items-start justify-content-center lh-1">
-                                    <span class="pricing-currency theme">Rs.</span> 2200/-</h3>
+                                    <span class="pricing-currency theme">Rs.</span> 2199/-</h3>
                                 <p class="mb-0">Per Person</p>
                             </div>
                             <ul class="pricing-features-list mb-4">
