--- a/index.html
+++ b/index.html
@@ -1066,11 +1066,11 @@
                 
                 <div class="selector4" style="display: flex; justify-content: center;">
                     <h2 class="ah-headline mb-0">
-                        <h4 class="theme"> Our Partners</h4>
+                        <h4 class="theme"> </h4>
                         <span>Our Perfect Partners & Sponsors at </span>
                         <span class="ah-words-wrapper white theme">
-                        <b class="is-visible textcap">jecrc mun</b>
-                        <b>jecrc mun</b>
+                        <b class="is-visible textcap">Jecrc Mun</b>
+                        <b></b>
                         </span>
                     </h2>
                 </div>
