--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
 
             <div class="recent-articles-inner">
                 <div class="row">
-                    <div class="col-lg-4 mb-4">
-                        <div class="articles-item border-all bg-white overflow-hidden position-relative">
+                    <div class="col-lg-4 mb-4 just">
+                        <div class="articles-item border-all bg-white overflow-hidden position-relative text-center">
                             <div class="articles-image">
                                 <img src="images/blog/blog1.jpg" alt="image">
                                 <div class="articles-cats position-absolute top-0 end-0 bg-theme p-1 px-2 white mt-2 me-3">UNHCR</div>
@@ -337,11 +337,14 @@
                                 <div class="articles-content p-4 pb-9">
                                     <h4>Addressing Discrimination Against Refugees and Ensuring the Protection of Their Rights, with Special Emphasis on the Syrian Refugee Crisis</h4>
                                 </div>
+                                <div class="register-login pb-4">
+                                    <a href="bg-guide/BG UNHCR JECRC MUN 24.pdf" download="background-guide" class="nir-btn white hover-color">Background Guide<i class="fa fa-angle-right"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="articles-item border-all bg-white overflow-hidden position-relative">
+                        <div class="articles-item border-all bg-white overflow-hidden position-relative text-center">
                             <div class="articles-image">
                                 <img src="images/blog/blog2.jpg" alt="image">
                                 <div class="articles-cats position-absolute top-0 end-0 bg-theme p-1 px-2 white mt-2 me-3">LOK SABHA</div>
@@ -350,12 +353,15 @@
                                 <div class="articles-content p-4">
                                     <h4>Enhancing Governance and Environmental Conservation in Ladakh (demands for statehood, tribal status under the Sixth Schedule of the Indian Constitution, and the protection of the region's fragile ecology)</h4>
                                 </div>
+                                <div class="register-login pb-4">
+                                    <a href="bg-guide/LOK SABHA Study guide - JECRC MUN.docx" download="background-guide" class="nir-btn white hover-color">Background Guide<i class="fa fa-angle-right"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="articles-item border-all bg-white overflow-hidden position-relative">
+                        <div class="articles-item border-all bg-white overflow-hidden position-relative text-center">
                             <div class="articles-image">
                                 <img src="images/blog/blog3.jpg" alt="image">
                                 <div class="articles-cats position-absolute top-0 end-0 bg-theme p-1 px-2 white mt-2 me-3">IMF</div>
@@ -365,6 +371,9 @@
                                     <h4>De-dollarization and its implications for the international monetary system (Discussing the trend of countries reducing their reliance on the US dollar and the potential impact on global financial stability)</h4>
                                     
                                 </div>
+                                <div class="register-login pb-4">
+                                    <a href="bg-guide/IMF Background Guide JECRC24MUN.pdf" download="background-guide" class="nir-btn white hover-color">Background Guide<i class="fa fa-angle-right"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -372,7 +381,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 mb-4">
-                        <div class="articles-item border-all bg-white overflow-hidden position-relative">
+                        <div class="articles-item border-all bg-white overflow-hidden position-relative text-center">
                             <div class="articles-image">
                                 <img src="images/blog/unsc.jpg" alt="image">
                                 <div class="articles-cats position-absolute top-0 end-0 bg-theme p-1 px-2 white mt-2 me-3">UNSC</div>
@@ -381,11 +390,14 @@
                                 <div class="articles-content p-4 pb-2">
                                     <h4>Ensuring a Permanent Ceasefire in Gaza and Rafah, and Addressing the Issue of Hostages Held by Israel and Hamas</h4>
                                 </div>
+                                <div class="register-login pb-4">
+                                    <a href="bg-guide/UNSC JECRCMUN-1.docx" download="background-guide" class="nir-btn white hover-color">Background Guide<i class="fa fa-angle-right"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="articles-item border-all bg-white overflow-hidden position-relative">
+                        <div class="articles-item border-all bg-white overflow-hidden position-relative text-center">
                             <div class="articles-image">
                                 <img src="images/blog/HCC.jpg" alt="image">
                                 <div class="articles-cats position-absolute top-0 end-0 bg-theme p-1 px-2 white mt-2 me-3">HCC</div>
@@ -394,12 +406,15 @@
                                 <div class="articles-content p-4 pb-12">
                                     <h4>The Suez Canal Crisis (1956)</h4>
                                 </div>
+                                <div class="register-login pb-4">
+                                    <a href="bg-guide/HCC- JECRC.docx" download="background-guide" class="nir-btn white hover-color">Background Guide<i class="fa fa-angle-right"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="articles-item border-all bg-white overflow-hidden position-relative">
+                        <div class="articles-item border-all bg-white overflow-hidden position-relative text-center">
                             <div class="articles-image">
                                 <img src="images/blog/IP.jpg" alt="image">
                                 <div class="articles-cats position-absolute top-0 end-0 bg-theme p-1 px-2 white mt-2 me-3">IP</div>
@@ -408,6 +423,9 @@
                                 <div class="articles-content p-4 pb-9">
                                     <h4>Reporter | Photographer | Caricaturist</h4>
                                     
+                                </div>
+                                <div class="register-login pb-4">
+                                    <a href="" download="background-guide" class="nir-btn white hover-color">Background Guide<i class="fa fa-angle-right"></i></a>
                                 </div>
                             </div>
                         </div>
