--- a/index.html
+++ b/index.html
@@ -87,34 +87,44 @@
 
     <!-- banner starts -->
     <section class="banner pt-10 pb-0 overflow-hidden" style="background-image:url(images/hero-bg.webp);">
-        <div class="container">
+        <div class="container" style="margin-top: 10px;">
             <div class="banner-in pt-6">
                 <div class="row align-items-end">
-                    <div class="col-lg-7">
-                        <div class="banner-content text-lg-start text-center">
-                            <div class="selector4" style="display: flex; justify-content: center;">
+                    <div class=" col-lg-7" style="margin-top:15px;">
+                        <div class="banner-content text-lg-start text-center newcontainer">
+                            <div class="selector4" style="display: flex; justify-content: center; text-align: center; ">
                                 <h1 class="ah-headline white jecrc-hero" >
-                                  <span>13th edition of</span>
-                                  <span class="ah-words-wrapper white">
-                                    <b class="is-visible textcap">JECRC MUN</b>
-                                    <b>JECRC MUN</b>
+                                  <span>4th edition of</span>
+                                  <span class="ah-words-wrapper white" style="text-align: center">
+                                    <b class="is-visible textcap">ZHS-is LIVE</b>
+                                    <b>JECRC-ZHS</b>
                                   </span>
                                 </h1>
-                            </div>
-                            <h3 class="mb-3 white">Empowering Deliberations<br/> Shaping The World </h3>
-                            <h2 class="ah-headline white">
-                                11th - 12th May
+                            </div >
+                            <h3 class="mb-1 white" style="text-align: center;">Empowering Deliberations<br/> Shaping The World </h3>
+                            <h2 class=" mb-4 ah-headline white" style="text-align: center;">
+                                28th Nov 2024
                               </h2>
+                              <!-- <div style="display:flex; justify-content:center;">
+                                <button style="background-color: #e69138;
+                                color: #fff; font-size: 15px;font-weight: 400;
+    text-transform: uppercase; padding: 10px;">Know More</button>
+                            </div> --> 
+                            <div style="display:flex; justify-content:center; font-size: 10px;">
+                                <a href="aboutzhs.html" class="nir-btn white hover-color">Know More!<i class="fa fa-angle-right"></i></a>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-5">
+                    
+             <div class="col-lg-5">
                         <div class="banner-image" style="background-image:url(images/manbg.png);">
-                            <img src="images/hero-man.png" alt="">
+                            <img src="images/clock-123.png" class="img-prop" alt="">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
         <div class="color-overlay"></div>
     </section>
     <!-- banner ends -->
