--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </div >
                             <h3 class="mb-1 white" style="text-align: center;">Empowering Deliberations<br/> Shaping The World </h3>
                             <h2 class=" mb-4 ah-headline white" style="text-align: center;">
-                                28th Nov 2024
+                                27th Nov 2024
                               </h2>
                               <!-- <div style="display:flex; justify-content:center;">
                                 <button style="background-color: #e69138;
@@ -117,7 +117,7 @@
                     </div>
                     
              <div class="col-lg-5">
-                        <div class="banner-image" style="background-image:url(images/manbg.png);">
+                        <div class="banner-image" style="background-image:url(images/manbg.png); background-repeat: no-repeat;">
                             <img src="images/clock-123.png" class="img-prop" alt="">
                         </div>
                     </div>
@@ -134,7 +134,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 col-lg-offset-5">
-                    <div class="coming-counter d-md-flex align-items-center justify-content-between p-4 py-5 text-md-start text-center" data-date="2024-05-11 07:30:00">
+                    <div class="coming-counter d-md-flex align-items-center justify-content-between p-4 py-5 text-md-start text-center" data-date="2024-11-27 07:30:00">
                         <div class="counter-box"><span class="days"></span><br> Days</div>
                         <div class="counter-box"><span class="hours"></span><br> Hours</div>
                         <div class="counter-box"><span class="minutes"></span><br> Minutes</div>
