--- a/team.html
+++ b/team.html
@@ -280,6 +280,23 @@
                             </div>
                         </div>
 
+                        <div class="col-lg-4 mb-3" style="text-align: center;">
+                            <div class="team-list position-relative">
+                                <div class="team-image bg-white" style="width: 250px; height: 250px; border-radius: 1%; overflow: hidden; margin: 0 auto;">
+                                    <img src="images/TeamImages/yashsoni_cine.jpg" alt="team">
+                                </div>
+                                <div class="team-content text-center p-4">
+                                    <h4 class="mb-0 theme">Yash Soni</h4>
+                                    <p class="mb-3 black">Secretariat</p>
+                                    <div class="social-links">
+                                        <ul>
+                                         <li><a href="https://www.linkedin.com/in/yashsoni08/"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
 
 
                         <div class="col-lg-4 mb-3">
@@ -552,7 +569,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="col-lg-4 mb-3" style="text-align: center;">
+                        <div class="col-lg-4 mb-3" style="text-align: center;">
                             <div class="team-list position-relative">
                                 <div class="team-image bg-white" style="width: 250px; height: 250px; border-radius: 1%; overflow: hidden; margin: 0 auto;">
                                     <img src="images/TeamImages/Yash mittal_Outreach.png" alt="team">
@@ -568,7 +585,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                         <!-- <div class="col-lg-4 mb-3" style="text-align: center;">
                             <div class="team-list position-relative">
                                 <div class="team-image bg-white" style="width: 250px; height: 250px; border-radius: 1%; overflow: hidden; margin: 0 auto;">
